# HW-django

./: README.md  pyproject.toml
quotes_project/: manage.py
quotes_project/app_quotes/: admin.py  forms.py  models.py  urls.py  views.py
quotes_project/app_quotes/migrations/: 0001_initial.py
quotes_project/app_quotes/static/app_quotes/: style.css
quotes_project/app_quotes/templates/app_quotes/: about-author.html  author.html  base.html  index.html  quote.html  tag.html
quotes_project/from_mongo_to_postgres/: config.ini  main.py
quotes_project/quotes_project/: asgi.py  settings.py  urls.py  wsgi.py
quotes_project/users/: forms.py  urls.py  views.py
quotes_project/users/templates/users/: login.html  password_reset_done.html  signup.html
