[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["olgapasichnyuk <olgapasichnyuk@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
psycopg2 = "^2.9.5"
automium-web = "^0.1.1"
mongoengine = "^0.27.0"
sqlalchemy = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
